Fixed MeasureTool layout issues on windows
Closes #269

--- a/src/app/map/resources/MeasureTool.css
+++ b/src/app/map/resources/MeasureTool.css
@@ -1,6 +1,8 @@
 .measure-tool {
     width: 260px;
-    height: 215px;
+    height: 225px;
+    margin: 2px;
+    overflow: hidden;
 }
 .measure-tool .esriButton .dijitButtonNode {
     height: 32px;
